<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none"
        tools:ignore="AlwaysShowAction">
        <item
            android:id="@+id/navigation_home"
            android:title="@string/home_page"
            android:iconTint="@color/white"
            android:icon="@drawable/house_icon"
            app:showAsAction="always"
            />
        <item
            android:id="@+id/navigation_asteroid"
            android:title="@string/asteroid_page"
            android:iconTint="@color/white"
            android:icon="@drawable/ic_asteroid_icon"
            app:showAsAction="always" />

        <item
            android:id="@+id/navigation_photo_earth"
            android:title="@string/photo_planet"
            android:iconTint="@color/white"
            android:icon="@drawable/ic_earth_icon"
            app:showAsAction="always"/>

        <item
            android:id="@+id/navigation_weather"
            android:title="@string/weather_in"
            android:iconTint="@color/white"
            android:icon="@drawable/weather_moonrise_icon"
            app:showAsAction="always"/>


        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_setting_icon"
            android:iconTint="@color/white"
            android:title="@string/settings"
            app:showAsAction="always" />
    </group>
</menu>