<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/main"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="10dp">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/inputLayout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/search_wiki"
          app:counterEnabled="true"
          app:counterMaxLength="10"
          app:endIconDrawable="@drawable/ic_wikipedia"
          app:endIconMode="custom"
          app:helperText="@string/wiki_helper_text"
          app:layout_constraintBottom_toTopOf="@+id/tabs"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:startIconDrawable="@drawable/ic_plus_fab">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputEditText"
             style="@style/MyTextAppearanceHeadline1"
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:textAppearance="@style/MyTextAppearanceHeadline1" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tabs"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/inputLayout">

         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/twoDaysAgo" />

         <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/yesterday" />


         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/today" />
      </com.google.android.material.tabs.TabLayout>


   <by.romanovich.materialdesign.utils.EquilateralImageView
       android:id="@+id/image_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:contentDescription="@string/photo_of_the_day_stub"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/ic_no_photo_vector" />
   </androidx.constraintlayout.widget.ConstraintLayout>

   <FrameLayout
       android:id="@+id/fragment_container_theme_settings"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1" />

   <include android:id="@+id/included"
       layout="@layout/buttom_sheet_layaut"/>

   <com.google.android.material.bottomappbar.BottomAppBar
       android:id="@+id/bottomAppBar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="bottom"
       app:fabAlignmentMode="center"
       app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />


   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_anchor="@id/bottomAppBar"
       app:srcCompat="@drawable/ic_plus_fab"
       app:tint="#FFFFFF"
       tools:ignore="SpeakableTextPresentCheck" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>